--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.4.0",
     "react-modal": "^3.16.3",
-    "react-quill": "^2.0.0",
+    "react-quill": "^2.0.0-beta.2",
     "react-router": "^7.1.1",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.2",
